--- a/InfiniTimeApp/app/src/main/res/values/strings.xml
+++ b/InfiniTimeApp/app/src/main/res/values/strings.xml
@@ -1,12 +1,22 @@
 <resources>
-    <string name="app_name">InfiniTimeApp</string>
+    <string name="app_name">Pinetime Infinitime Communicator</string>
+
     <string name="scan_button">Scan</string>
     <string name="disconnect_button">Disconnect</string>
+    <string name="tap_info">Tap on a row to connect</string>
 
+    <string name="dev_info">Device information</string>
     <string name="manufacturer">Manufacturer: </string>
     <string name="model">Model Number: </string>
     <string name="serial">Serial Number: </string>
-    <string name="fw_revision">FW_REVISION: </string>
-    <string name="hw_revision">HW_REVISION: </string>
-    <string name="sw_revision">SW_REVISION: </string>
+    <string name="fw_revision">FW REVISION: </string>
+    <string name="hw_revision">HW REVISION: </string>
+    <string name="sw_revision">SW REVISION: </string>
+
+    <string name="send_alert">Alert:</string>
+    <string name="send_button">Send</string>
+
+    <string name="music_track">Track:</string>
+    <string name="music_artist">Artist:</string>
+    <string name="music_album">Album:</string>
 </resources>
