--- a/InfiniTimeApp/app/src/main/res/values/strings.xml
+++ b/InfiniTimeApp/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="music_track">Track:</string>
     <string name="music_artist">Artist:</string>
     <string name="music_album">Album:</string>
+    <string name="button_playing">Playing</string>
 </resources>
